# MCF

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mcf.hexpat
blender/mcf-tools/addons/mcf_codec/: __init__.py  exporter.py  importer.py  mcf.py
include/MCF/: core.h  model_ext.h  type_ext.h
include/mcf/: core.h  model_ext.h
src/: CMakeLists.txt  codec.h  decoder.c  encoder.c  encoder.h  file_io.c  footprint.c  footprint.h  init.c  internal.h  main.c  memory.c  model.c  model.h
